--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ img{ border:0; -ms-interpolation-mode:bicubic; vertical-align:middle; color:tran
 /* Links
 -------------------------------------------- */
 a{ text-decoration:none; color:#00e; }
-a:link{ -webkit-tap-highlight-color:#FF5E99;  } 
 a:visited{ color:#551a8b; }
 a:focus{ outline:thin dotted; }
 a:hover, a:active{ color:#00a;  outline:0; }
@@ -40,14 +39,13 @@ h3{font-size:21px; }
 h4{font-size:19px; }
 h5{font-size:17px; }
 h6{font-size:15px; }
-h1 img, h2 img, h3 img, h4 img, h5 img, h6 img{margin:0; }
 
 abbr[title]{ border-bottom:1px dotted; }
 b, strong{font-weight:bold; }
 blockquote{margin:1em 40px; }
 dfn{font-style:italic; }
-ins{background-color:#ff9; color:inherit; text-decoration:none; }
-mark{background-color:#ff9; color:inherit; font-style:italic; font-weight:bold; }
+ins{background-color:#ff9; color:#000; text-decoration:none; }
+mark{background-color:#ff9; color:#000; font-style:italic; font-weight:bold; }
 pre, code, kbd, samp{ font-family:monospace,monospace;  _font-family:'courier new',monospace;  font-size:1em; }
 pre{ white-space:pre;  white-space:pre-wrap;  word-wrap:break-word; }
 q{quotes:none; }
