--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
 /**
-  * CSS Backbone v0.4
-  *
   * Licensing: The Unlicense - (http://unlicense.org) (aka: public domain) 
   * Source: https://github.com/justinlabenne/normalize.css forked from: http://necolas.github.com/normalize.css/
   * Contains: normalization, base styles, 960 grid system (12 column only), helper classes and other nifties.
@@ -48,22 +46,22 @@ ins{background-color:#ff9; color:#000; text-decoration:none; }
 mark{background-color:#ff9; color:#000; font-style:italic; font-weight:bold; }
 pre, code, kbd, samp{ font-family:monospace,monospace;  _font-family:'courier new',monospace;  font-size:1em; }
 pre{ white-space:pre;  white-space:pre-wrap;  word-wrap:break-word; }
-q{quotes:none; }
-q:before, q:after{content:''; content:none; }
-small{font-size:75%; }
-sub, sup{font-size:75%; line-height:0; position:relative; vertical-align:baseline; }
-sup{top:-0.5em; }
-sub{bottom:-0.25em; }
+q{ quotes:none; }
+q:before, q:after{ content:''; content:none; }
+small{ font-size:75%; }
+sub, sup{ font-size:75%; line-height:0; position:relative; vertical-align:baseline; }
+sup{ top:-0.5em; }
+sub{ bottom:-0.25em; }
 
 /* Lists
 -------------------------------------------- */
-ul, ol{margin:1em 0; padding:0 0 0 40px; }
-dd{margin:0 0 0 40px; }
-nav ul, nav ol{list-style:none; }
+ul, ol{ margin:1em 0; padding:0 0 0 40px; }
+dd{ margin:0 0 0 40px; }
+nav ul, nav ol{ list-style:none; }
 
 /* Figures
 -------------------------------------------- */
-figure{margin:0; }
+figure{ margin:0; }
 
 /* Forms
 -------------------------------------------- */
@@ -90,11 +88,11 @@ input[type="date"],
 input[type="month"], 
 input[type="week"], 
 input[type="datetime"], 
-input[type="datetime-local"]{padding:9px 7px 10px 7px; border-top:1px solid #ccc; border-right:1px solid #aaa; border-bottom:1px solid #aaa; border-left:1px solid #ccc; -moz-border-radius:4px; -khtml-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; }
+input[type="datetime-local"]{transition: all 0.25s ease-in-out; -webkit-transition: all 0.25s ease-in-out; -moz-transition: all 0.25s ease-in-out; padding: 9px 7px 10px 7px; border-top: 1px solid #ccc; border-right: 1px solid #aaa; border-bottom: 1px solid #aaa; border-left: 1px solid #ccc; -moz-border-radius: 4px; -khtml-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
 
-textarea{overflow:auto; vertical-align:top; resize:vertical; border-color:#ccc #aaa #aaa #ccc; border-style:solid; border-width:1px; padding:5px 3px 7px 5px; -moz-border-radius:4px; -khtml-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; }
+textarea{overflow: auto; vertical-align: top; resize: vertical; border-color: #ccc #aaa #aaa #ccc; border-style: solid; border-width: 1px; padding: 5px 3px 7px 5px; -moz-border-radius: 4px; -khtml-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
 
-select, textarea:focus, input:focus{ outline:none; border-color:#aaa #888 #888 #aaa; border-style:solid; border-width:1px; }
+select, textarea:focus, input:focus{ outline:none; box-shadow: 0 0 15px #3366CC; -webkit-box-shadow: 0 0 15px #3366CC; -moz-box-shadow: 0 0 15px #3366CC; border:1px solid #3366CC; background-color: white; }
 
 button, 
 input[type="button"], 
@@ -108,12 +106,12 @@ input[type="submit"]:hover,
 button:focus, 
 input[type="button"]:focus, 
 input[type="reset"]:focus, 
-input[type="submit"]:focus{background-position:0 -6px; border-color:#999 #999 #888; color:#000; }
+input[type="submit"]:focus{ background-position:0 -6px; border-color:#999 #999 #888; color: #000; }
 
 button:active, 
 input[type="button"]:active, 
 input[type="reset"]:active, 
-input[type="submit"]:active{background-image:none; text-shadow:none; outline:none; }
+input[type="submit"]:active{ background-image:none; text-shadow:none; outline:none; }
 
 input[type="checkbox"], 
 input[type="radio"]{ box-sizing:border-box; }
@@ -136,9 +134,9 @@ th, td{ padding:0;  text-align:left; vertical-align:middle; }
 ::-moz-selection{background:#FF5E99; color:#fff; text-shadow:none; }
 ::selection{background:#FF5E99; color:#fff; text-shadow:none; }
 
-/* 960 Grid System (12 column only) (Remove if you don't use)
+/* 960 Grid System (12 column only)
 ----------------------------------------------------------------------------------------------------*/
-body{ min-width:960px}.container_12{ margin-left:auto; margin-right:auto; width:960px}.grid_1,.grid_2,.grid_3,.grid_4,.grid_5,.grid_6,.grid_7,.grid_8,.grid_9,.grid_10,.grid_11,.grid_12{ display:inline; float:left; margin-left:10px; margin-right:10px}.push_1,.pull_1,.push_2,.pull_2,.push_3,.pull_3,.push_4,.pull_4,.push_5,.pull_5,.push_6,.pull_6,.push_7,.pull_7,.push_8,.pull_8,.push_9,.pull_9,.push_10,.pull_10,.push_11,.pull_11{ position:relative}.alpha{ margin-left:0}.omega{ margin-right:0}.container_12 .grid_1{ width:60px}.container_12 .grid_2{ width:140px}.container_12 .grid_3{ width:220px}.container_12 .grid_4{ width:300px}.container_12 .grid_5{ width:380px}.container_12 .grid_6{ width:460px}.container_12 .grid_7{ width:540px}.container_12 .grid_8{ width:620px}.container_12 .grid_9{ width:700px}.container_12 .grid_10{ width:780px}.container_12 .grid_11{ width:860px}.container_12 .grid_12{ width:940px}.container_12 .prefix_1{ padding-left:80px}.container_12 .prefix_2{ padding-left:160px}.container_12 .prefix_3{ padding-left:240px}.container_12 .prefix_4{ padding-left:320px}.container_12 .prefix_5{ padding-left:400px}.container_12 .prefix_6{ padding-left:480px}.container_12 .prefix_7{ padding-left:560px}.container_12 .prefix_8{ padding-left:640px}.container_12 .prefix_9{ padding-left:720px}.container_12 .prefix_10{ padding-left:800px}.container_12 .prefix_11{ padding-left:880px}.container_12 .suffix_1{ padding-right:80px}.container_12 .suffix_2{ padding-right:160px}.container_12 .suffix_3{ padding-right:240px}.container_12 .suffix_4{ padding-right:320px}.container_12 .suffix_5{ padding-right:400px}.container_12 .suffix_6{ padding-right:480px}.container_12 .suffix_7{ padding-right:560px}.container_12 .suffix_8{ padding-right:640px}.container_12 .suffix_9{ padding-right:720px}.container_12 .suffix_10{ padding-right:800px}.container_12 .suffix_11{ padding-right:880px}.container_12 .push_1{ left:80px}.container_12 .push_2{ left:160px}.container_12 .push_3{ left:240px}.container_12 .push_4{ left:320px}.container_12 .push_5{ left:400px}.container_12 .push_6{ left:480px}.container_12 .push_7{ left:560px}.container_12 .push_8{ left:640px}.container_12 .push_9{ left:720px}.container_12 .push_10{ left:800px}.container_12 .push_11{ left:880px}.container_12 .pull_1{ left:-80px}.container_12 .pull_2{ left:-160px}.container_12 .pull_3{ left:-240px}.container_12 .pull_4{ left:-320px}.container_12 .pull_5{ left:-400px}.container_12 .pull_6{ left:-480px}.container_12 .pull_7{ left:-560px}.container_12 .pull_8{ left:-640px}.container_12 .pull_9{ left:-720px}.container_12 .pull_10{ left:-800px}.container_12 .pull_11{ left:-880px}
+body{min-width:960px}.container_12{margin-left:auto;margin-right:auto;width:960px}.grid_1,.grid_2,.grid_3,.grid_4,.grid_5,.grid_6,.grid_7,.grid_8,.grid_9,.grid_10,.grid_11,.grid_12{display:inline;float:left;margin-left:10px;margin-right:10px}.push_1,.pull_1,.push_2,.pull_2,.push_3,.pull_3,.push_4,.pull_4,.push_5,.pull_5,.push_6,.pull_6,.push_7,.pull_7,.push_8,.pull_8,.push_9,.pull_9,.push_10,.pull_10,.push_11,.pull_11{position:relative}.alpha{margin-left:0}.omega{margin-right:0}.container_12 .grid_1{width:60px}.container_12 .grid_2{width:140px}.container_12 .grid_3{width:220px}.container_12 .grid_4{width:300px}.container_12 .grid_5{width:380px}.container_12 .grid_6{width:460px}.container_12 .grid_7{width:540px}.container_12 .grid_8{width:620px}.container_12 .grid_9{width:700px}.container_12 .grid_10{width:780px}.container_12 .grid_11{width:860px}.container_12 .grid_12{width:940px}.container_12 .prefix_1{padding-left:80px}.container_12 .prefix_2{padding-left:160px}.container_12 .prefix_3{padding-left:240px}.container_12 .prefix_4{padding-left:320px}.container_12 .prefix_5{padding-left:400px}.container_12 .prefix_6{padding-left:480px}.container_12 .prefix_7{padding-left:560px}.container_12 .prefix_8{padding-left:640px}.container_12 .prefix_9{padding-left:720px}.container_12 .prefix_10{padding-left:800px}.container_12 .prefix_11{padding-left:880px}.container_12 .suffix_1{padding-right:80px}.container_12 .suffix_2{padding-right:160px}.container_12 .suffix_3{padding-right:240px}.container_12 .suffix_4{padding-right:320px}.container_12 .suffix_5{padding-right:400px}.container_12 .suffix_6{padding-right:480px}.container_12 .suffix_7{padding-right:560px}.container_12 .suffix_8{padding-right:640px}.container_12 .suffix_9{padding-right:720px}.container_12 .suffix_10{padding-right:800px}.container_12 .suffix_11{padding-right:880px}.container_12 .push_1{left:80px}.container_12 .push_2{left:160px}.container_12 .push_3{left:240px}.container_12 .push_4{left:320px}.container_12 .push_5{left:400px}.container_12 .push_6{left:480px}.container_12 .push_7{left:560px}.container_12 .push_8{left:640px}.container_12 .push_9{left:720px}.container_12 .push_10{left:800px}.container_12 .push_11{left:880px}.container_12 .pull_1{left:-80px}.container_12 .pull_2{left:-160px}.container_12 .pull_3{left:-240px}.container_12 .pull_4{left:-320px}.container_12 .pull_5{left:-400px}.container_12 .pull_6{left:-480px}.container_12 .pull_7{left:-560px}.container_12 .pull_8{left:-640px}.container_12 .pull_9{left:-720px}.container_12 .pull_10{left:-800px}.container_12 .pull_11{left:-880px}
 
 
 /* START PROJECT STYLES
@@ -151,39 +149,36 @@ body{ min-width:960px}.container_12{ margin-left:auto; margin-right:auto; width:
 ----------------------------------------------------------------------------------------------------*/
 
 
-.roundCorners{-moz-border-radius:5px; -khtml-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; }
-.clear{clear:both; display:block; overflow:hidden; visibility:hidden; width:0; height:0; }
-.left{float:left !important; }
-.right{float:right !important; }
-p .left{margin:1.5em 1.5em 1.5em 0; padding:0; }
-p .right{margin:1.5em 0 1.5em 1.5em; padding:0; }
-.watermark{color:#bbb; }
-.hidden{display:none; visibility:hidden; }
-.visuallyhidden{border:0; clip:rect(0 0 0 0); height:1px; margin:-1px; overflow:hidden; padding:0; position:absolute; width:1px; }
+.roundCorners{ -moz-border-radius:5px; -khtml-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; }
+.clear{ clear:both; display:block; overflow:hidden; visibility:hidden; width:0; height:0; }
+.left{ float:left !important; }
+.right{ float:right !important; }
+p .left{ margin:1.5em 1.5em 1.5em 0; padding:0; }
+p .right{ margin:1.5em 0 1.5em 1.5em; padding:0; }
+.watermark{ color:#bbb; }
+.hidden{ display:none; visibility:hidden; }
+.visuallyhidden{ border:0; clip:rect(0 0 0 0); height:1px; margin:-1px; overflow:hidden; padding:0; position:absolute; width:1px; }
 .visuallyhidden.focusable:active, 
-.visuallyhidden.focusable:focus{clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto; }
-.invisible{visibility:hidden; }
-.clearfix:before, .clearfix:after{content:"\0020"; display:block; height:0; visibility:hidden; }
-.clearfix:after{clear:both; }
-.clearfix{zoom:1; }
+.visuallyhidden.focusable:focus{ clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto; }
+.invisible{ visibility:hidden; }
+.clearfix:before,.clearfix:after,.container_12:before,.container_12:after { content: ""; display: table; }
+.clearfix:after,.container_12:after{ clear:both }
+.clearfix,.container_12{ zoom:1 }
 
 @media only screen and (min-width:480px){ }
-
 @media only screen and (min-width:768px){ }
-
-@media print{ *{background:transparent !important; color:black !important; text-shadow:none !important; filter:none !important;  -ms-filter:none !important; }
-
- a, a:visited{color:#444 !important; text-decoration:underline; }
- a[href]:after{content:"("attr(href) ")"; }
- abbr[title]:after{content:"("attr(title) ")"; }
- .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after{content:""; }
- 
- pre, blockquote{border:1px solid #999; page-break-inside:avoid; }
- thead{display:table-header-group; }
-
- tr, img{page-break-inside:avoid; }
- img{max-width:100% !important; }
- @page{margin:0.5cm; }
- p, h2, h3{orphans:3; widows:3; }
- h2, h3{page-break-after:avoid; }
+@media print {
+  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important;
+  -ms-filter: none !important; } /* Black prints faster: sanbeiji.com/archives/953 */
+  a, a:visited { color: #444 !important; text-decoration: underline; }
+  a[href]:after { content: " (" attr(href) ")"; }
+  abbr[title]:after { content: " (" attr(title) ")"; }
+  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
+  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+  thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */
+  tr, img { page-break-inside: avoid; }
+  img { max-width: 100% !important; }
+  @page { margin: 0.5cm; }
+  p, h2, h3 { orphans: 3; widows: 3; }
+  h2, h3 { page-break-after: avoid; }
 }
