--- a/main.master
+++ b/main.master
@@ -1,49 +1,52 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="main.master.cs" Inherits="main" %>
 
 <!doctype html>
-<html lang="en">
+<!--[if lt IE 9]><html class="no-js oldie" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head runat="server">
-	<meta charset="utf-8"> 	
+	<meta charset="utf-8" /> 	
+	<link rel="dns-prefetch" href="//ajax.googleapis.com" />
 	<title></title>
 	<meta name="author" content="" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="application-name" content="Website Name" />
-	<meta name="geo.region" content="US-OH" />
-	<meta name="geo.placename" content="Clyde, Ohio, United States" />
-	<meta name="geo.position" content="41.30422;-82.975192" />
-	<meta name="ICBM" content="41.30422, -82.975192" />
-	<link rel="author" type="text/plain" href="http://website.com/humans.txt" />
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="icon" type="image/ico" href="favicon.ico" />
-	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
-	<link href="css/style.css" rel="stylesheet" type="text/css" />
-    <asp:ContentPlaceHolder id="head" runat="server"></asp:ContentPlaceHolder>	
-	<!--[if lt IE 9]><script src="js/html5.js" type="text/javascript"></script><![endif]-->
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />    
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="stylesheet" href="css/style.css" />
+    <asp:ContentPlaceHolder id="head" runat="server"></asp:ContentPlaceHolder>
+	<script src="js/modernizr-2.0.6.min.js"></script>
 </head>
 <body>
     <form id="form1" runat="server">
-	<!--[if lt IE 7]><script type="text/javascript" src="js/ie6msg.js"></script><![endif]-->
-
 
 	<div id="main" class="container_12">
-		<asp:ContentPlaceHolder id="mainContentPlaceholder" runat="server">
+		<header>
+		</header>
+
+		<asp:ContentPlaceHolder id="contentHolder" runat="server">
 		
 		</asp:ContentPlaceHolder>
+
+		<footer>
+			<span id="copyright"></span> You
+		</footer>
 	</div>
 
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery-1.6.2.min.js"><\/script>')</script>
+	<asp:ContentPlaceHolder ID="scriptHolder" runat="server"></asp:ContentPlaceHolder>
     </form>
 
-
-	<!-- Use this snippet for a website that WILL have SSL -->
-	<!--<script type="text/javascript">
-	var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];(function (d, t) {var g = d.createElement(t), s = d.getElementsByTagName(t)[0]; g.async = 1;g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';s.parentNode.insertBefore(g, s)}(document, 'script'));
-	</script>-->
-
-	<!-- Use this snippet for a website that will NOT have SSL -->
-	<!--<script type="text/javascript">
-	var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']]; (function (d, t) {var g = d.createElement(t), s = d.getElementsByTagName(t)[0];g.async = 1; g.src = '//www.google-analytics.com/ga.js'; s.parentNode.insertBefore(g, s)} (document, 'script'))
-	</script>-->
+	<script>
+	document.getElementById('copyright').innerHTML = 'Copyright &copy; ' + (new Date()).getFullYear();
+	//window._gaq = [['_setAccount', 'UAXXXXXXXX1'], ['_trackPageview'], ['_trackPageLoadTime']];
+	//Modernizr.load({ load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js' });
+	</script>
+	<!--[if lt IE 7 ]>
+	<script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+	<script defer>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+	<![endif]-->
 </body>
 </html>
