--- a/main.master
+++ b/main.master
@@ -10,7 +10,7 @@
 	<meta name="author" content="" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<meta name="application-name" content="Website Name" />
+	<meta name="application-name" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/ico" href="favicon.ico" />    
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
