--- a/main.master
+++ b/main.master
@@ -4,7 +4,7 @@
 <!--[if lt IE 9]><html class="no-js oldie" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head runat="server">
-	<meta charset="utf-8" /> 	
+	<meta charset="utf-8" />
 	<link rel="dns-prefetch" href="//ajax.googleapis.com" />
 	<title></title>
 	<meta name="author" content="" />
@@ -12,21 +12,21 @@
 	<meta name="keywords" content="" />
 	<meta name="application-name" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/ico" href="favicon.ico" />    
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="icon" type="image/ico" href="favicon.ico" />    
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/style.css" />
-    <asp:ContentPlaceHolder id="head" runat="server"></asp:ContentPlaceHolder>
+	<asp:ContentPlaceHolder id="head" runat="server"></asp:ContentPlaceHolder>
 	<script src="js/modernizr-2.0.6.min.js"></script>
 </head>
 <body>
-    <form id="form1" runat="server">
+	<form id="form1" runat="server">
 
 	<div id="main" class="container_12">
 		<header>
 		</header>
 
 		<asp:ContentPlaceHolder id="contentHolder" runat="server">
-		
+
 		</asp:ContentPlaceHolder>
 
 		<footer>
@@ -37,14 +37,14 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.6.2.min.js"><\/script>')</script>
 	<asp:ContentPlaceHolder ID="scriptHolder" runat="server"></asp:ContentPlaceHolder>
-    </form>
+	</form>
 
 	<script>
 	document.getElementById('copyright').innerHTML = 'Copyright &copy; ' + (new Date()).getFullYear();
-    //var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
-    //(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    //g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    //s.parentNode.insertBefore(g,s)}(document,'script'));
+	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
+	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+	s.parentNode.insertBefore(g,s)}(document,'script'));
 	</script>
 	<!--[if lt IE 7 ]>
 	<script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
