--- a/main.master
+++ b/main.master
@@ -1,8 +1,8 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="main.master.cs" Inherits="main" %>
 
 <!doctype html>
-<!--[if lt IE 9]><html class="no-js oldie" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<!--[if lte IE 9]><html class="no-js oldie" lang="en"><![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head runat="server">
 	<meta charset="utf-8" />
 	<link rel="dns-prefetch" href="//ajax.googleapis.com" />
@@ -14,9 +14,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" type="image/ico" href="favicon.ico" />    
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="<%=ResolveClientUrl("~/css/style.css")%>" />
 	<asp:ContentPlaceHolder id="head" runat="server"></asp:ContentPlaceHolder>
-	<script src="js/modernizr-2.0.6.min.js"></script>
+	<script src="<%=ResolveClientUrl("~/js/modernizr-2.0.6.min.js")%>"></script>
 </head>
 <body>
 	<form id="form1" runat="server">
@@ -41,10 +41,10 @@
 
 	<script>
 	document.getElementById('copyright').innerHTML = 'Copyright &copy; ' + (new Date()).getFullYear();
-	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
-	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-	s.parentNode.insertBefore(g,s)}(document,'script'));
+//	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
+//	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+//	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+//	s.parentNode.insertBefore(g,s)}(document,'script'));
 	</script>
 	<!--[if lt IE 7 ]>
 	<script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
